--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,9 +1,9 @@
 {"version_code":451244,"content":"
-<p>تحديث 2.20</p>
+<p>تحديث 4.10</p>
 
 <li>نسخه ضد الحظر</li>
 <li>نسخة ضد الحظر (في حال تم حظر رقمك في وقت سابق يجب عمل نسخة احتياطية للمحادثات ثم حذف الواتس اب وتثبيته من جديد)</li>
-<li>تمديد صلاحية النسخة لمدة شهرين</li>
+<li>تم اصلاح الخط والثيمات والخلفيات </li>
 <li>اضافه زياده اعظاء المجموعه 1024بدلا من 256</li>
 <li>اضافه خيار زياده عدد المشتركين في الرسائل الجماعيه 1024بدلا من 256</li>
 <li>اضافه خيار اخفاء الحالات الحديثه</li>
