--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,5 @@
-{"version_code":452649,"content":"
-<p>تحديث 7.20</p>
+{"version_code":451990,"content":"
+<p>تحديث 8.10</p>
 </li>تم اصلاح جميع المشاكل في النسخه الجديه</li>
 </li>تم اصلاح انهيار الثيمات  تم اصلاح الخطوط </li>
 <li>نسخه ضد الحظر</li>
@@ -16,8 +16,8 @@
 <li>اصلاح مشكلة ظهور عداد الرسائل المخفية</li>
 <li> تعديل علاء اسماعيل<li>
 </li>المبرمج الاساسي  انتظرو النسخه الحمراء قريبا</li>
-<p>New Base Updated 7.20</p>
+<p>New Base Updated 8.10</p>
 <p> Update method: Click Open. You will see the explanation article. You will find links in golden, red and blue. Download and install the new version without deleting the old version </ p>
 
-","url":"https://www.free-netsyr.com/2019/06/2020_20.html"
+","url":"https://www.free-netsyr.com/2019/07/blog-post.html"
 }
