--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-{"version_code":451244,"content":"
+{"version_code":451990,"content":"
 <p>تحديث 8.20</p>
 </li>تم اصلاح جميع المشاكل في النسخه الجديه</li>
 </li>تم اصلاح انهيار الثيمات  تم اصلاح الخطوط </li>
@@ -19,5 +19,5 @@
 <p>New Base Updated 8.10</p>
 <p> Update method: Click Open. You will see the explanation article. You will find links in golden, red and blue. Download and install the new version without deleting the old version </ p>
 
-","url":"https://www.free-netsyr.com/2019/07/blog-post.html"
+","url":"https://www.free-netsyr.com/2019/07/whatsapp-plus.html"
 }
