--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,23 +1,14 @@
-{"version_code":451244,"content":"
+{"version_code":451990,"content":"
 <p>تحديث 8.20</p>
-</li>تم اصلاح جميع المشاكل في النسخه الجديه</li>
-</li>تم اصلاح انهيار الثيمات  تم اصلاح الخطوط </li>
+<li>حدث لكي لا تتوقف النسخه عندك</li>
+</li>تم اصلاح مشاكل كثيره</li>
 <li>نسخه ضد الحظر</li>
-<li>نسخة ضد الحظر (في حال تم حظر رقمك في وقت سابق يجب عمل نسخة احتياطية للمحادثات ثم حذف الواتس اب وتثبيته من جديد)</li>
-<li>تم اصلاح الخط والثيمات والخلفيات </li>
-<li>اضافه زياده اعظاء المجموعه 1024بدلا من 256</li>
-<li>اضافه خيار زياده عدد المشتركين في الرسائل الجماعيه 1024بدلا من 256</li>
-<li>اضافه خيار اخفاء الحالات الحديثه</li>
-<li>اخفاء الحالات التي تمت مشاهدتها</li>
-<li>اخفاء الحالات الغير هامه</li>
-<li>اضافه خيار تعدد الدردشات</li>
-<li>اصلاح لون الدفعات في شاشة المحادثة</li>
-<li>اصلاح الانهيار عند فتح محادثة في بعض الاصدارات</li>
-<li>اصلاح مشكلة ظهور عداد الرسائل المخفية</li>
+<li>تم اصلاح عندما ينتهي الاصدار يوجهك الى موقع الاساسي</li>
+<li>تم تمديد النسخه شهرين</li>
 <li> تعديل علاء اسماعيل<li>
-</li>المبرمج الاساسي  انتظرو النسخه الحمراء قريبا</li>
-<p>New Base Updated 8.10</p>
+
+<p>New Base Updated 8.20</p>
 <p> Update method: Click Open. You will see the explanation article. You will find links in golden, red and blue. Download and install the new version without deleting the old version </ p>
 
-","url":"https://www.free-netsyr.com/2019/07/whatsapp-plus.html"
+","url":"https://www.free-netsyr.com/2019/07/whatsapp3.html"
 }
